--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <header>
+    <h1>RoboJs</h1>
+  </header>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
