--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>RoboJS</title>
   <%= stylesheet_link_tag    'application' => true, media: 'all' %>
   <%= javascript_include_tag 'application' %>
+  <script src="//js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
