--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,13 +1,14 @@
-
-<div class="title"><%=@challenge.title%></div>
-<div class="description"><%= @challenge.description %></div>
+<div class="challenge-title"><h3><%= @challenge.title %></h3></div>
+<div class="challenge-description"><%= @challenge.description %></div>
+<div class="challenge-tutorial"><%= @challenge.tutorial %></div>
 <%= @message if @message %>
-<div class="console">
+<div class="game-console">
   <%= form_for @game, url: challenge_game_path(@challenge, @game), controller: :games, method: "put" do |f|%>
     <% f.label :status_string %>
-    <%= f.text_area :status_string %>
+    <%= f.text_area :status_string, rows: 10, cols: 40 %><br>
     <%= f.submit "test your code!" %>
   <% end %>
+
   <div class="success"></div>
 </div>
 
