added some blue

--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -17,9 +17,9 @@ body {
   content:"";
     position:absolute;
     z-index:-1;
-    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -webkit-box-shadow:0 0 10px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 10px rgba(0,0,0,0.8);
+    box-shadow:0 0 10px rgba(0,0,0,0.8);
     top:50%;
     bottom:0;
     left:10px;
@@ -55,4 +55,12 @@ body {
 
 .splash-enter-button {
   margin: 46%;
+  padding: 10px;
+  background: #00979c;
+  border-radius: 5px;
+}
+
+.splash-enter-button, .splash-enter-button:visited {
+  color: white;
+  text-decoration: none;
 }
