--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -2,10 +2,12 @@ body {
   top: 0;
   left: 0;
   margin: 0;
+  background:#fcfcfc;
+
 }
 .box{
   width:40%;
-  background:#FFF;
+  background:#fcfcfc;
   margin:0 auto;
 }
 
@@ -17,9 +19,9 @@ body {
   content:"";
     position:absolute;
     z-index:-1;
-    -webkit-box-shadow:0 0 10px rgba(0,0,0,0.8);
-    -moz-box-shadow:0 0 10px rgba(0,0,0,0.8);
-    box-shadow:0 0 10px rgba(0,0,0,0.8);
+    -webkit-box-shadow:0 0 10px rgba(0,151,156,0.8);
+    -moz-box-shadow:0 0 10px rgba(0,151,156,0.8);
+    box-shadow:0 0 10px rgba(0,151,156,0.8);
     top:50%;
     bottom:0;
     left:10px;
@@ -46,6 +48,7 @@ body {
   padding: 10px;
   margin: 0;
   color: black;
+  text-shadow: 0 0 5px #00cbcf;
 }
 
 .splash-container {
@@ -56,7 +59,8 @@ body {
 .splash-enter-button {
   margin: 46%;
   padding: 10px;
-  background: #00979c;
+  /*background: #00979c;*/
+  background: #006569;
   border-radius: 5px;
 }
 
