added robot picture to homepage

--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -54,6 +54,7 @@ body {
 .splash-container {
   width: 40%;
   margin: 30px auto 0;
+  padding-bottom: 20px;
 }
 
 .splash-enter-button {
@@ -62,9 +63,16 @@ body {
   /*background: #00979c;*/
   background: #006569;
   border-radius: 5px;
+  font-size: 18px;
 }
 
 .splash-enter-button, .splash-enter-button:visited {
   color: white;
   text-decoration: none;
+}
+
+.robo-picture {
+  margin-left: 25px;
+  padding: 0 15px 15px;
+
 }
