--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
 <body>
   <header>
     <h1>RoboJs</h1>
+    <nav>
+      <ul class="user-navigation">
+      <% if current_user %>
+        <li><%= link_to "Log Out", logout_path %></li>
+        <li><%= link_to "Profile", profile_path(current_user) %></li>
+      <% end %>
+      <ul>
+    </nav>
   </header>
   <div class="container">
     <%= yield %>
