--- a/app/assets/stylesheets/challenge.css
+++ b/app/assets/stylesheets/challenge.css
@@ -17,3 +17,18 @@
   padding: 15px;
   /*display: inline-block;*/
 
+
+.challenge-navigation {
+  display: block;
+  float: right;
+}
+
+.challenge-navigation a, .challenge-navigation a:visited {
+  color: #00979c;
+  list-style: none;
+}
+
+.challenge-navigation li {
+  float: left;
+  display: inline-block;
+}
