--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <nav>
       <ul class="user-navigation">
       <% if current_user %>
-        <li><%= link_to "Log Out", logout_path %></li>
+        <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
         <li><%= link_to "Profile", profile_path(current_user) %></li>
       <% end %>
       <ul>
