--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -5,7 +5,12 @@
   <%= failure_message unless failure_message.nil? %>
 </div>
 
-<%= form_for game, url: challenge_game_path(challenge, game,  game: game.attributes), controller: :games, method: "put" do |f|%>
+    
+
+<%= form_for game, url: challenge_game_path(challenge, game,  game: game.attributes), controller: :games, method: "put" do |f| %>
   <%= f.text_area :status_string, rows: 10, cols: 40 %><br>
   <%= f.submit "Test your code!", class: "game-console-button" %>
 <% end %>
+
+<a href="#" class="hint-link">Hint</a>
+<div class="hint"><%= challenge.hint %></div>
