--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -4,7 +4,12 @@
 
 <!-- <canvas id="myCanvas" width="500" height="400"></canvas> -->
 
-<div class="game-console">
-  <%= render partial: "challenges/console", locals: { game: @game, challenge: @challenge, success_message: @success_message, failure_message: @failure_message } %>
+<div class="console-side">
+
+  <div class="game-console">
+    <%= render partial: "challenges/console", locals: { game: @game, challenge: @challenge, success_message: @success_message, failure_message: @failure_message } %>
+  </div>
+
+  <%= render partial: "challenges/navigation", locals: { challenge: @challenge, previous_challenge: @previous_challenge, next_challenge: @next_challenge } %>
 
 </div>
