--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -14,7 +14,8 @@ header h1{
 .container {
   margin: 0 auto;
   padding: 10px;
-  width: 800px;
+  width: 820px;
+  display: block;
 }
 
 .user-navigation a, .user-navigation a:visited {
