--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -10,5 +10,5 @@
   <%= f.submit "Test your code!", class: "game-console-button" %>
 <% end %>
 
-<a href="#" class="hint-link">Hint</a>
+<a href="#" class="hint-link">Stumped?</a>
 <div class="hint"><%= challenge.hint %></div>
