--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -13,8 +13,10 @@
 	    <%= render partial: "challenges/console", locals: { game: @game, challenge: @challenge, success_message: @success_message, failure_message: @failure_message } %>
 	  </div>
 
-	  <ul class="challenge-navigation">
-		  <%= render partial: "challenges/navigation", locals: { challenge: @challenge, previous_challenge: @previous_challenge, next_challenge: @next_challenge } %>
-		</ul>
+		<div class="challenge-nav-bar">
+		  <ul class="challenge-navigation">
+			  <%= render partial: "challenges/navigation", locals: { challenge: @challenge, previous_challenge: @previous_challenge, next_challenge: @next_challenge } %>
+			</ul>
+		</div>
 	</div>
 </div>
