--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -2,12 +2,14 @@ body {
   top: 0;
   left: 0;
   margin: 0;
-  background-color: #ced8e4;
+  /*background-color: #ced8e4;*/
+  background-color: #f9f9ff;
 
 }
 .box{
   width:40%;
-  background-color: #ced8e4;
+  /*background-color: #ced8e4;*/
+  background-color: #f9f9ff;
   margin:0 auto;
 }
 
