removed db logic from view

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -15,7 +15,7 @@
 
 		<div class="challenge-nav-bar">
 		  <ul class="challenge-navigation">
-			  <%= render partial: "challenges/navigation", locals: { challenge: @challenge, previous_challenge: @previous_challenge, next_challenge: @next_challenge } %>
+			  <%= render partial: "challenges/navigation", locals: { challenge: @challenge, previous_challenge: @previous_challenge, prev_game: @prev_game, next_challenge: @next_challenge, next_game: @next_game } %>
 			</ul>
 		</div>
 	</div>
