--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -36,7 +36,8 @@ nav {
   list-style: none;
   float: right;
   margin: 0;
-  padding: 0;
+  /*padding: 0;*/
+  margin-right: 30px;
 }
 
 .user-navigation li {
