--- a/app/assets/stylesheets/login-forms.css
+++ b/app/assets/stylesheets/login-forms.css
@@ -15,7 +15,7 @@
   width: 30%;
   padding: 20px 20px 30px;
   position: relative;
-  background: #ced8e4;
+  background: #f9f9ff;
 }
 
 .login-lines {
