--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -1,8 +1,8 @@
 <div class="success">
-  <%= success_message unless success_message.nil? %>
+  <%= success_message %>
 </div>
 <div class="failure">
-  <%= failure_message unless failure_message.nil? %>
+  <%= failure_message %>
 </div>
 
 <%= form_for game, url: challenge_game_path(game, challenge_id: challenge.id, id: game.id), controller: :games, method: "put" do |f| %>
