added html tags

--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -11,4 +11,4 @@
 <% end %>
 
 <a href="#" class="hint-link">Stumped?</a>
-<div class="hint"><%= challenge.hint %></div>
+<div class="hint"><%= raw(challenge.hint) %></div>
