--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,5 +1,5 @@
 <div class="challenge-title"><h3><%= @challenge.title %></h3></div>
-<div class="challenge-description"><%= @challenge.description %></div>
+<div class="challenge-description"><%= raw(@challenge.description) %></div>
 <div class="challenge-tutorial"><%= @challenge.tutorial %></div>
 
 
