--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -3,7 +3,9 @@ body {
   left: 0;
   margin: 0;
   /*background-color: #ced8e4;*/
-  background-color: #f9f9ff;
+  /*background-color: #f9f9ff;*/
+  background-image: url(/assets/shadow.jpg) no-repeat;
+  background-position: center;
 
 }
 .box{
