--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,12 @@
 <h3 class="profile-challenges-header">Challenges</h3>
 <ol class="profile-challenges">
   <% @current_challenges.each_with_index do |challenge, i| %>
-    <li><%= link_to "#{@challenges[i].title}", challenge_games_path(challenge), method: :post %></li>
+    <li>
+      <%= link_to "#{@challenges[i].title}", challenge_games_path(challenge), method: :post %>
+      <div class="status-border">
+        <div class="game-status <%= @challenges[i].game_status(current_user) %>"></div>
+      </div>
+    </li>
+
   <% end %>
 </ol>
