--- a/app/assets/stylesheets/game_status.css
+++ b/app/assets/stylesheets/game_status.css
@@ -2,9 +2,8 @@
   height: 19px;
   width: 19px;
   border-radius: 10px;
-  margin: 2px 10px;
-  background-color: #9c9c9c;
-  /*position: fixed;*/
+  margin: 2px 8px;
+  background-color: #6f6f6f;
   float: left;
 }
 
@@ -13,17 +12,16 @@
   width: 15px;
   margin-top: 2px;
   margin-left: 2px;
-  /*float: left;*/
   border-radius: 10px;
-  box-shadow: inset 0 0 8px #696969;
+  box-shadow: inset 0 0 8px #333;
 }
 
 .completed {
-  background-color: green;
+  background-color: #89F502;
 }
 
 .in-progress {
-  background-color: yellow;
+  background-color: rgb(132, 0, 255);
 }
 
 
