fixed bug with cloud, there is still a minor issue with the button

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -3,7 +3,7 @@
 <div class="challenge-tutorial"><%= @challenge.tutorial %></div>
 
 <%= image_tag "Robot_icon.svg", :id => "robot-icon" %>
-<%= image_tag "cloud.jpg", :id => "cloud" %>
+<%= image_tag "cloud.svg.med.png", :id => "cloud" %>
 <div class="canvas-and-console">
 	<div class="canvas-side">
 		<canvas id="myCanvas" width="400" height="400"></canvas>
