--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -3,13 +3,18 @@ body {
   left: 0;
   margin: 0;
   /*background-color: #ced8e4;*/
-  background-color: #f9f9ff;
+  /*background-color: #f9f9ff;*/
+  background: url('/assets/splash-background.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
 }
 .box{
   width:40%;
   /*background-color: #ced8e4;*/
-  background-color: #f9f9ff;
+  background-color: white;
   margin:0 auto;
 }
 
@@ -62,6 +67,8 @@ body {
   background: #006569;
   border-radius: 5px;
   font-size: 18px;
+  position: absolute;
+  top: 650px;
 }
 
 .splash-enter-button, .splash-enter-button:visited {
