--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -25,6 +25,7 @@ nav {
   padding: 10px;
   width: 820px;
   display: block;
+  overflow: auto;
 }
 
 .user-navigation a, .user-navigation a:visited {
