--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -3,7 +3,7 @@ body {
   left: 0;
   margin: 0;
   /*background-color: #ced8e4;*/
-  /*background-color: #f9f9ff;*/
+  background-color: #f9f9ff;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
