badges only adding once now

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -34,7 +34,7 @@
 
 <script>
 $(document).ready(function() {
-  if ('popUpDiv'){
+  if($('popUpDiv').length){
     popup('popUpDiv');
     $('#nextSlide').on('click', function (){
   	   nextSlide();
