--- a/app/assets/stylesheets/tutorial.css
+++ b/app/assets/stylesheets/tutorial.css
@@ -10,6 +10,8 @@
 }
 
 #popUpDiv {
+  margin-left: -6%;
+  left: 0;
   position:absolute;
   width:600px;
   height:400px;
@@ -27,6 +29,7 @@
 }
 
 .button {
+  margin: auto;
   position: absolute;
   width: 50px;
 }
