--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,15 @@
 </head>
 <body>
   <header>
-    <h1>RoboJs</h1>
     <nav>
       <ul class="user-navigation">
       <% if current_user %>
-        <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
-        <li><%= link_to "Profile", profile_path(current_user) %></li>
+        <li><%= link_to "Profile", profile_path(current_user, id: "profile") %></li>
+        <li><%= link_to "Log Out", logout_path, method: "delete", id: "logout" %></li>
       <% end %>
       </ul>
     </nav>
+    <h1 class="layout-header">RoboJs</h1>
   </header>
   <div class="container">
     <%= yield %>
