possible soultion for reset button

--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -9,6 +9,7 @@
   <%= f.text_area :status_string, rows: 10, cols: 40 %><br>
   <%= f.submit "Test your code!", class: "game-console-button" %>
 <% end %>
+<button class="reset-robot-button">Reset</button>
 
 <a href="#" class="hint-link">Stumped?</a>
 <div class="hint"><%= raw(challenge.hint) %></div>
