--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -8,17 +8,35 @@ header {
   vertical-align: middle;
 }
 
+.general-headers {
+  width: 100%;
+  display: inline-block;
+}
+
 .layout-header {
-  margin: auto;
-  padding: 15px;
-  margin-left: 33%;
-  display: inline-block;
+  width: 32%;
+  margin: 0 auto;
+  padding: 1%;
+  /*margin-left: 33%;*/
+  float: left;
+  text-align: center;
 }
 
-nav {
-  display: inline-block;
+.profile {
+  width: 32%;
+  text-align: left;
+  padding-left: 1%;
+  float: left;
+  margin-top: 26px;
+
 }
 
+.logout{
+  width: 32%;
+  text-align: right;
+  float: left;
+  margin-top: 26px;
+}
 .container {
   margin: 0 auto;
   padding: 10px;
@@ -27,25 +45,12 @@ nav {
   overflow: auto;
 }
 
-.user-navigation a, .user-navigation a:visited {
+.user-navigaion {
+}
+
+.user-navigation, .user-navigation:visited {
   color: #fff;
   text-decoration: none;
-}
-
-.user-navigation {
-  list-style: none;
-  display: inline-block;
-  margin: 0;
-}
-
-.user-navigation li {
-  float: left;
-  padding: 0 4px;
-}
-
-.user-navigation li a {
-  display: inline;
-  padding: 0 4px;
 }
 
 input[type="submit"]{
@@ -54,10 +59,10 @@ input[type="submit"]{
 
 input[type="submit"]:hover{
   background-color: #00999f;
-;
+
 }
 
-#profile {
+/*#profile {
   position: absolute;
   left: 5%;
 }
@@ -66,3 +71,4 @@ input[type="submit"]:hover{
   position: absolute;
   right: 5%;
 }
+*/
