--- a/app/assets/stylesheets/login-forms.css
+++ b/app/assets/stylesheets/login-forms.css
@@ -10,15 +10,12 @@
 
 .sign-up-form {
   float: left;
-  display: inline-block;
+  /*display: inline-block;*/
   margin-left: 120px;
   width: 30%;
-  padding: 20px 20px 30px;
+  padding: 20px 20px 20px;
   position: relative;
-  background: #f9f9ff;
-}
-
-.login-lines {
+  background: #fcffff;
 }
 
 .submit-button {
