--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -2,23 +2,25 @@ body {
   top: 0;
   left: 0;
   margin: 0;
-  background-color: #f9f9ff;
+  background-color: #fcffff;
+  height: 100%;
 
 }
 
 .splash-body-background {
-  background-image: linear-gradient(to left, #006569, white);
+  background: linear-gradient(to top, #00cacf, #fcffff 30%) no-repeat center center fixed;
   /*background: url('/assets/splash-background.png') no-repeat center center fixed; */
- /* -webkit-background-size: cover;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;*/
+  background-size: cover;
+  overflow: auto;
 }
 
 .box{
   width:40%;
   /*background-color: #ced8e4;*/
-  background-color: white;
+  background-color: #fcffff;
   /*background-color: transparent;*/
   margin:0 auto;
 }
