--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,4 +1,4 @@
-<% unless @tutorial %>
+<% if @challenge.tutorial %>
   <div id="blanket" style="display: none"></div>
   <div id="popUpDiv" style="display: none">
   	<%= image_tag "for-loop-slide1.jpg", :class => "slide", :id => "slide1" %>
