--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -29,7 +29,7 @@ body {
   position:relative;
 }
 
-.splash-header:before, .splash-header:after {
+/*.splash-header:before, .splash-header:after {
   content:"";
     position:absolute;
     z-index:-1;
@@ -42,9 +42,9 @@ body {
     right:10px;
     -moz-border-radius:100px / 10px;
     border-radius:100px / 10px;
-}
+}*/
 
-.splash-header:after {
+/*.splash-header:after {
   right:10px;
   left:auto;
   -webkit-transform:skew(8deg) rotate(3deg);
@@ -54,39 +54,48 @@ body {
           transform:skew(8deg) rotate(3deg);
 }
 
-
+*/
 .splash-h1 {
   font-family: "Open Sans", sans-serif;
   text-align: center;
   font-size: 60px;
   padding: 10px;
+  margin: 0 auto;
   color: #006569;
 }
 
 .splash-container {
   text-align: center;
-  width: 515px;
-  margin: auto;
+  width: 830px;
+  margin: 0 auto;
 }
 
-.splash-enter-button {
-  padding: 10px;
-  background: #006569;
-  border-radius: 5px;
-  font-size: 18px;
-  position: absolute;
-  top: 675px;
+.robot-welcome {
+  position: relative;
 }
 
-.splash-enter-button, .splash-enter-button:visited {
+/*.login-path-link {
+  top: 50%;
+  left: 49.5%;
+}*/
+
+/*.login-path-link, .login-path-link:visited {
   color: white;
   text-decoration: none;
-}
+  font-size: 18px;
+  position: fixed;
+}*/
 
-.splash-enter-button:hover {
-  background-color: #00999f;
-}
+/*.login-link {
+  padding: 20px;
+}*/
 
-.robo-picture {
-  padding: 25px 10px 25px;
+.splash-enter-button {
+  width: 50px;
+  height: 50px;
+  background: none;
+  border-radius: 30px;
+  position: absolute;
+  /*top: 375px;*/
+  /*padding: 10px 0;*/
 }
