--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -17,6 +17,7 @@ header {
   width: 32%;
   margin: 0 auto;
   padding: 1%;
+  font-family: 'Sarpanch', sans-serif;
   /*margin-left: 33%;*/
   float: left;
   text-align: center;
