--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -55,9 +55,9 @@ body {
 
 */
 .splash-h1 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Sarpanch", sans-serif;
   text-align: center;
-  font-size: 60px;
+  font-size: 65px;
   padding: 10px;
   margin: 0 auto;
   color: #006569;
