--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -18,10 +18,12 @@ body {
 
 .box{
   width:40%;
+  border-radius: 75px;
   /*background-color: #ced8e4;*/
-  background-color: #fcffff;
+  background-color: #6126c2;
   /*background-color: transparent;*/
   margin:0 auto;
+  margin-top: 10px;
 }
 
 .splash-header {
@@ -58,7 +60,7 @@ body {
   font-family: "Open Sans", sans-serif;
   text-align: center;
   font-size: 60px;
-  padding: 10px;
+  /*padding: 5px;*/
   margin: 0 auto;
   color: #006569;
 }
@@ -71,6 +73,7 @@ body {
 
 .robot-welcome {
   position: relative;
+  margin-top: 10px;
 }
 
 /*.login-path-link {
@@ -97,4 +100,10 @@ body {
   position: absolute;
   /*top: 375px;*/
   /*padding: 10px 0;*/
+}
+
+.shadow {
+   -moz-box-shadow:    inset 0 0 20px #bb90ea;
+   -webkit-box-shadow: inset 0 0 20px #bb90ea;
+   box-shadow:         inset 0 0 20px #bb90ea;
 }
