--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="gradient-background">
   <header>
   <div class="general-headers">
     <div class="profile">
@@ -27,6 +28,7 @@
   </header>
   <div class="container">
     <%= yield %>
+  </div>
   </div>
 </body>
 </html>
