--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -2,26 +2,25 @@ body {
   top: 0;
   left: 0;
   margin: 0;
-  background-color: #fcffff;
   height: 100%;
-
+  background-image: url(../images/background-pattern.png);
 }
 
-.splash-body-background {
-  background: linear-gradient(to top, #00cacf, #fcffff 30%) no-repeat center center fixed;
-  /*background: url('/assets/splash-background.png') no-repeat center center fixed; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.gradient-background:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to top, #00cacf, transparent 30%) no-repeat center center fixed;
 }
 
 .box{
   width:40%;
   border-radius: 75px;
-  /*background-color: #ced8e4;*/
   background-color: #6126c2;
-  /*background-color: transparent;*/
   margin:0 auto;
   margin-top: 10px;
 }
@@ -59,10 +58,10 @@ body {
 .splash-h1 {
   font-family: "Sarpanch", sans-serif;
   text-align: center;
-  font-size: 65px;
-  padding: 10px;
+  font-size: 60px;
+  /*padding: 10px;*/
   margin: 0 auto;
-  color: #006569;
+  color: #c8fbeb;
 }
 
 .splash-container {
