--- a/app/assets/stylesheets/challenge.css
+++ b/app/assets/stylesheets/challenge.css
@@ -34,6 +34,23 @@
   position: absolute;
 }
 
+.total-description{
+  /*background-color: rgba(245,255,255,0.8);*/
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin: 5px;
+  
+}
+
+.challenge-title {
+  text-align: center;
+  /*font-family: "Sarpanch", sans-serif;*/
+}
+
+.challenge-description {
+  
+}
+
 .canvas-and-console {
   width: 100%;
   display: inline-block;
@@ -115,4 +132,3 @@
   z-index: 1000;
 
 }
-
