--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -8,9 +8,11 @@
   </div>	
 <% end %>
 
-<div class="challenge-title"><h3><%= @challenge.title %></h3></div>
-<div class="challenge-description"><%= raw(@challenge.description) %></div>
-<div class="challenge-tutorial"><%= @challenge.tutorial %></div>
+<div class="total-description">
+  <div class="challenge-title"><h3><%= @challenge.title %></h3></div>
+  <div class="challenge-description"><%= raw(@challenge.description) %></div>
+  <div class="challenge-tutorial"><%= @challenge.tutorial %></div>
+</div>
 
 <%= image_tag "Robot_icon.svg", :id => "robot-icon" %>
 <%= image_tag "cloud.svg.med.png", :id => "cloud" %>
