--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>RoboJS</title>
   <%= stylesheet_link_tag 'application' %>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300|Sarpanch' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300|Sarpanch|Julee' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag 'application' %>
   <script src="//js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
   <%= csrf_meta_tags %>
