--- a/app/views/challenges/_console.html.erb
+++ b/app/views/challenges/_console.html.erb
@@ -4,6 +4,7 @@
 
 <div class="success">
   <%= success_message %>
+  <% raw(success_sound) %>
 </div>
 <div class="failure">
   <%= failure_message %>
