--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -23,7 +23,7 @@
 	<div class="console-side">
 
 	  <div class="game-console">
-	    <%= render partial: "challenges/console", locals: { game: @game, challenge: @challenge, success_message: @success_message, failure_message: @failure_message } %>
+	    <%= render partial: "challenges/console", locals: { game: @game, challenge: @challenge, success_message: @success_message, success_sound: @success_sound, failure_message: @failure_message } %>
 	  </div>
 
 		<div class="challenge-nav-bar">
