made styles more better

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -36,6 +36,7 @@
 
 <script>
 $(document).ready(function() {
+  $('.container').css('background-color', 'rgba(245,255,255,0.75)')
   $('.gradient-background').removeClass();
 
   if ($('#popUpDiv').length){
