updated readme and robot icon

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -14,7 +14,7 @@
   <div class="challenge-tutorial"><%= @challenge.tutorial %></div>
 </div>
 
-<%= image_tag "Robot_icon.svg", :id => "robot-icon" %>
+<%= image_tag "rupert.png", :id => "robot-icon" %>
 <%= image_tag "cloud.svg.med.png", :id => "cloud" %>
 <div class="canvas-and-console">
 	<div class="canvas-side">
